k8s/base/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: colorflow
spec:
  selector:
    app: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: http
