k8s/base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colorflow
  namespace: colorflow
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: mlserver
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
